@@ -213,6 +213,7 @@ struct c3x_config {
 	enum retreat_rules land_retreat_rules;
 	enum retreat_rules sea_retreat_rules;
 	bool allow_defensive_retreat_on_water;
+	struct table limit_defensive_retreat_on_water_to_types;
 	int ai_multi_city_start;
 	int max_tries_to_place_fp_city;
 	int * ai_multi_start_extra_palaces;
