@@ -493,8 +493,14 @@ land_retreat_rules = standard
 sea_retreat_rules = standard
 
 ; Under the base game rules, no unit may retreat defensively if it's located on a water tile. This option removes this special rule so naval units can
-; retreat defensively just like land units do. See also: the sea_retreat_rules option above.
+; retreat defensively like land units do. See also: the sea_retreat_rules option above and the limit_defensive_retreat_on_water_to_types option below.
 allow_defensive_retreat_on_water = false
+
+; If any unit types are listed here, defensive retreat on water tiles will be limited to those types. Otherwise, all types may retreat that way. The
+; list is separated by spaces and multi-word type names must be wrapped in quotation marks. For example, setting to:
+;   [Submarine "Nuclear Submarine"]
+; would mean that only those submarine naval units could retreat defensively. This option does nothing if allow_defensive_retreat_on_water is false.
+limit_defensive_retreat_on_water_to_types = []
 
 ; The multi-city start spawns in multiple cities for AI players at the start of the game instead of their usual one settler. This option controls the
 ; number of cities the AI starts with. E.g., if it's set to 2, the AI starts with 2 cities. If it's set <= 0, the game starts like normal. The mod can
